video: Lots of new formats not added to the scalers fast-path
E.g. GST_VIDEO_FORMAT_GBRA
(1.12) is missing and all the 10/12/16 bit formats. Most of them should also be possible to go directly through convert_scale_planes
Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
E.g. GST_VIDEO_FORMAT_GBRA
(1.12) is missing and all the 10/12/16 bit formats. Most of them should also be possible to go directly through convert_scale_planes